--- a/timeTracker.css
+++ b/timeTracker.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 html{
-    background-image: linear-gradient(to bottom right, #B5BACE, white);
+    background-color: #282838;
     height: 100%;
 }
 .wrapper    {
@@ -18,27 +18,64 @@ html{
     justify-content: space-evenly;
     margin: auto;
     align-items: center;
-    border: black 1px solid;
+    border: #EDA920 1px solid;
     width: 800px;
-    height: 50px;
-    margin-bottom: 5px;
+    height: 60px;
+    margin-bottom: 0px;
+    margin-top: -1px;
+}
+.row:not(#row0)  {
+    height: 45px; 
+}
+
+h1  {
+    color: white;
+    letter-spacing: .1em;
+    font-family: 'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    font-size: 16px;
-    padding: 0px 0px;
+    font-size: 15px;
+    font-family: 'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    padding: 1px 0px 3px 0px;
     margin: auto;
+    letter-spacing: .05em;
+    color: white;
 }
 textarea    {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
-    font-size: 14px;
+    font-size: 16px;
     resize: none;
+    background-color: #46465C;
+    color: white;
+    border: 1px black solid;
 }
 .headingContainer   {
+    display: flex;
+    justify-content: center;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    padding: 10px 0px 20px 0px;
+    width: 100%;
+    padding: 20px 0px;
+    background-color: #09090F;
+    margin-bottom: 10px;
+    background-image: linear-gradient(to bottom right, #09090F, #1B1B29);
+    box-shadow: 0px 2px black;
+}
+.button input {
+    background-color: #E26723;
+    border: none;
+    color: white;
+    padding: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-bloc;
+    color: white;
+    font-weight: bold;
+    border-radius: 2px;
+    
+}
+#row0 {
+    margin-top: 15px;
 }
