--- a/timeTracker.css
+++ b/timeTracker.css
@@ -20,15 +20,31 @@ html{
     align-items: center;
     border: #EDA920 1px solid;
     width: 800px;
-    height: 60px;
+    height: 45px;
     margin-bottom: 0px;
     margin-top: -1px;
 }
-.row:not(#row0)  {
-    height: 45px; 
+.rowHeader {
+    display: flex;
+    justify-content: center;
+    height: 30px;
+    padding-top: 10px;
+}
+.rowHeaderTag1  {
+    margin-right: 40px;
+}
+.rowHeaderTag2  {
+    margin-right: 170px;
+}
+.rowHeaderTag3  {
+    margin-right: 40px;
+}
+.rowHeaderTag4  {
+    margin-right: 210px;
 }
 
 h1  {
+    margin-top: 12px;
     color: white;
     letter-spacing: .1em;
     font-family: 'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -49,6 +65,7 @@ textarea    {
     background-color: #46465C;
     color: white;
     border: 1px black solid;
+    box-shadow: -2px 2px black;
 }
 .headingContainer   {
     display: flex;
@@ -74,8 +91,21 @@ textarea    {
     color: white;
     font-weight: bold;
     border-radius: 2px;
+    box-shadow: -3px 3px black;
     
 }
-#row0 {
-    margin-top: 15px;
+.headingSubContRight {
+    margin: auto;
+    padding: 0px;
+    border: #EDA920 2px solid;
+}
+.headingSubContLeft {
+    margin: auto;
+    padding: 0px;
+    width:60px;
+}
+.headingSubContainer    {
+    display: flex;
+    justify-content: space-between;
+    width: 1000px;
 }
